tests/error/linear_errors/iterator_copy.err
Error: Copy violation (at $FILE:16:8)
   | 
14 |     for i in q:
15 |         i + i
16 |     use(q)
   |         ^ Variable `q` with non-copyable type `array[int, 3]` cannot
   |           be consumed ...
   | 
14 |     for i in q:
   |              - since it was already consumed here

Help: Consider copying `q` instead of moving it: `q.copy()`

Guppy compilation failed due to 1 previous error
